@@ -1,0 +1,6 @@
+#ifdef __i386__
+// This is most probably a x86_64 system with 32 bit userland.
+#include "cl_asm_i386_.cc"
+#else
+// Nothing here yet.
+#endif
